jdk17: fix cmd