@@ -61,11 +61,13 @@ exec ${CMD} \
   --add-opens=java.base/java.lang=ALL-UNNAMED \
   --add-opens=java.base/java.math=ALL-UNNAMED \
   --add-opens=java.base/java.util=ALL-UNNAMED \
+  --add-opens=java.base/java.util.stream=ALL-UNNAMED \
   --add-opens=java.base/java.util.concurrent=ALL-UNNAMED \
   --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED \
   --add-opens=java.base/java.net=ALL-UNNAMED \
   --add-opens=java.base/java.text=ALL-UNNAMED \
   --add-opens=java.sql/java.sql=ALL-UNNAMED \
+  --add-opens=java.util.concurrent.atomic/java.util.concurrent.atomic=ALL-UNNAMED \
   -XX:ActiveProcessorCount=${cpuCount} \
   -cp $1/conf:lib/* \
   oap.application.Boot \
